# novelist

./: .gitignore  README.md  pyproject.toml
novelist/: README.md  app.py  openai_test.py  pyproject.toml
novelist/novelist/: main.py
ui/: README.md  pyproject.toml
ui/ui/: ui.py
