[tool.poetry]
name = "novelist"
version = "0.1.0"
description = ""
authors = ["Flzomb <spark3840@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
openai = "^1.8.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
